include/gpac/filters.h


typedef struct __gf_filter_session GF_FilterSession;
typedef struct __gf_filter GF_Filter;
typedef struct __gf_filter_pid GF_FilterPid;
typedef struct __gf_prop_val GF_PropertyValue;
typedef struct __gf_prop_entry GF_PropertyEntry;
typedef enum
{
	GF_FS_STATS_FILTER_UNKNOWN,
	GF_FS_STATS_FILTER_RAWIN,
	GF_FS_STATS_FILTER_DEMUX,
	GF_FS_STATS_FILTER_DECODE,
	GF_FS_STATS_FILTER_ENCODE,
	GF_FS_STATS_FILTER_MUX,
	GF_FS_STATS_FILTER_RAWOUT,
	GF_FS_STATS_FILTER_MEDIA_SINK,
	GF_FS_STATS_FILTER_MEDIA_SOURCE,
} GF_FSFilterType;
typedef struct
{
	const GF_Filter *filter;
	const GF_Filter *filter_alias;
	u64 nb_tasks_done;
	u64 nb_pck_processed;
	u64 nb_bytes_processed;
	u64 nb_pck_sent;
	u64 nb_hw_pck_sent;
	u32 nb_errors;
	u64 nb_bytes_sent;
	u64 time_process;
	s32 percent;
	const char *status;
	Bool report_updated;
	const char *name;
	const char *reg_name;
	const char *filter_id;
	Bool done;
	u32 nb_pid_in;
	u64 nb_in_pck;
	u32 nb_pid_out;
	u64 nb_out_pck;
	Bool in_eos;
	GF_FSFilterType type;
	u32 stream_type;
	u32 codecid;
	GF_Fraction64 last_ts_sent;
	GF_Fraction64 last_ts_drop;
} GF_FilterStats;
typedef enum
{
	GF_FILTER_UPDATE_DOWNSTREAM = 1<<1,
	GF_FILTER_UPDATE_UPSTREAM = 1<<2,
} GF_EventPropagateType;
void gf_fs_send_update(GF_FilterSession *session, const char *fid, GF_Filter *filter, const char *name, const char *val, GF_EventPropagateType propagate_mask);
typedef enum
{
	GF_PROP_FORBIDEN=0,
	GF_PROP_SINT,
	GF_PROP_UINT,
	GF_PROP_LSINT,
	GF_PROP_LUINT,
	GF_PROP_BOOL,
	GF_PROP_FRACTION,
	GF_PROP_FRACTION64,
	GF_PROP_FLOAT,
	GF_PROP_DOUBLE,
	GF_PROP_VEC2I,
	GF_PROP_VEC2,
	GF_PROP_VEC3I,
	GF_PROP_VEC3,
	GF_PROP_VEC4I,
	GF_PROP_VEC4,
	GF_PROP_PIXFMT,
	GF_PROP_PCMFMT,
	GF_PROP_STRING,
	GF_PROP_STRING_NO_COPY,
	GF_PROP_DATA,
	GF_PROP_NAME,
	GF_PROP_DATA_NO_COPY,
	GF_PROP_CONST_DATA,
	GF_PROP_POINTER,
	GF_PROP_STRING_LIST,
	GF_PROP_UINT_LIST,
	GF_PROP_SINT_LIST,
	GF_PROP_VEC2I_LIST,
	GF_PROP_LAST_DEFINED,
} GF_PropType;
struct __gf_prop_val
{
	GF_PropType type;
	union {
		u64 longuint;
		s64 longsint;
		s32 sint;
		u32 uint;
		Bool boolean;
		GF_Fraction frac;
		GF_Fraction64 lfrac;
		Fixed fnumber;
		Double number;
		GF_PropVec2i vec2i;
		GF_PropVec2 vec2;
		GF_PropVec3i vec3i;
		GF_PropVec3 vec3;
		GF_PropVec4i vec4i;
		GF_PropVec4 vec4;
		GF_PropData data;
		char *string;
		void *ptr;
		GF_List *string_list;
		GF_PropUIntList uint_list;
		GF_PropIntList sint_list;
		GF_PropVec2iList v2i_list;
	} value;
};
const char *gf_props_4cc_get_name(u32 prop_4cc);
u32 gf_props_4cc_get_type(u32 prop_4cc);
u32 gf_props_get_id(const char *name);
typedef struct
{
	const char *arg_name;
	s32 offset_in_private;
	const char *arg_desc;
	GF_PropType arg_type;
	const char *arg_default_val;
	const char *min_max_enum;
	GF_FSArgumentFlags flags;
} GF_FilterArgs;
const char *gf_filter_get_name(GF_Filter *filter);
void gf_filter_remove(GF_Filter *filter);
u32 gf_filter_get_ipid_count(GF_Filter *filter);
GF_FilterPid *gf_filter_get_ipid(GF_Filter *filter, u32 idx);
u32 gf_filter_get_opid_count(GF_Filter *filter);
GF_FilterPid *gf_filter_get_opid(GF_Filter *filter, u32 idx);
GF_Err gf_filter_set_source(GF_Filter *filter, GF_Filter *link_from, const char *link_ext);
const char *gf_filter_get_id(GF_Filter *filter);
GF_Err gf_filter_reconnect_output(GF_Filter *filter);
const GF_PropertyValue *gf_filter_get_info(GF_Filter *filter, u32 prop_4cc, GF_PropertyEntry **propentry);
const GF_PropertyValue *gf_filter_get_info_str(GF_Filter *filter, const char *prop_name, GF_PropertyEntry **propentry);
void gf_filter_release_property(GF_PropertyEntry *propentry);
GF_Err gf_filter_get_stats(GF_Filter *filter, GF_FilterStats *stats);
const GF_FilterArgs *gf_filter_enumerate_args(GF_Filter *filter, u32 idx);
const GF_PropertyValue *gf_filter_pid_get_property(GF_FilterPid *PID, u32 prop_4cc);
const GF_PropertyValue *gf_filter_pid_get_property_str(GF_FilterPid *PID, const char *prop_name);
const GF_PropertyValue *gf_filter_pid_enum_properties(GF_FilterPid *PID, u32 *idx, u32 *prop_4cc, const char **prop_name);
const GF_PropertyValue *gf_filter_pid_get_info(GF_FilterPid *PID, u32 prop_4cc, GF_PropertyEntry **propentry);
const GF_PropertyValue *gf_filter_pid_get_info_str(GF_FilterPid *PID, const char *prop_name, GF_PropertyEntry **propentry);
GF_Filter *gf_filter_pid_get_source_filter(GF_FilterPid *PID);
GF_Filter *gf_filter_pid_enum_destinations(GF_FilterPid *PID, u32 idx);
GF_Err gf_filter_push_caps(GF_Filter *filter, u32 code, GF_PropertyValue *value, const char *name, u32 flags, u8 priority);