gpac/include/gpac/constants.h


const char *gf_stream_type_name(u32 streamType);
u32 gf_stream_type_by_name(const char *name);
typedef enum
{
	GF_PIXEL_GREYSCALE	=	GF_4CC('G','R','E','Y'),
	GF_PIXEL_ALPHAGREY	=	GF_4CC('G','R','A','L'),
	GF_PIXEL_GREYALPHA	=	GF_4CC('A','L','G','R'),
	GF_PIXEL_RGB_444	=	GF_4CC('R','4','4','4'),
	GF_PIXEL_RGB_555	=	GF_4CC('R','5','5','5'),
	GF_PIXEL_RGB_565	=	GF_4CC('R','5','6','5'),
	GF_PIXEL_RGB		=	GF_4CC('R','G','B','3'),
	GF_PIXEL_BGR		=	GF_4CC('B','G','R','3'),
	GF_PIXEL_RGBX		=	GF_4CC('R','G','B','4'),
	GF_PIXEL_BGRX		=	GF_4CC('B','G','R','4'),
	GF_PIXEL_XRGB		=	GF_4CC('R','G','B','X'),
	GF_PIXEL_XBGR		=	GF_4CC('B','G','R','X'),
	GF_PIXEL_ARGB		=	GF_4CC('A','R','G','B'),
	GF_PIXEL_RGBA		=	GF_4CC('R','G','B', 'A'),
	GF_PIXEL_BGRA		=	GF_4CC('B','G','R','A'),
	GF_PIXEL_ABGR		=	GF_4CC('A','B','G','R'),
	GF_PIXEL_RGBD		=	GF_4CC('R', 'G', 'B', 'D'),
	GF_PIXEL_RGBDS		=	GF_4CC('3', 'C', 'D', 'S'),
	GF_PIXEL_RGB_DEPTH = GF_4CC('R', 'G', 'B', 'd'),
	GF_PIXEL_UNCV = GF_4CC('u', 'n', 'c', 'v'),
	GF_PIXEL_YUYV		=	GF_4CC('Y','U','Y','V'),
	GF_PIXEL_YVYU		=	GF_4CC('Y','V','Y','U'),
	GF_PIXEL_UYVY		=	GF_4CC('U','Y','V','Y'),
	GF_PIXEL_VYUY		=	GF_4CC('V','Y','U','Y'),
	GF_PIXEL_YUYV_10		=	GF_4CC('Y','U','Y','L'),
	GF_PIXEL_YVYU_10		=	GF_4CC('Y','V','Y','L'),
	GF_PIXEL_UYVY_10		=	GF_4CC('U','Y','V','L'),
	GF_PIXEL_VYUY_10		=	GF_4CC('V','Y','U','L'),
	GF_PIXEL_YUV		=	GF_4CC('Y','U','1','2'),
	GF_PIXEL_YVU		=	GF_4CC('Y','V','1','2'),
	GF_PIXEL_YUV_10	=	GF_4CC('Y','0','1','0'),
	GF_PIXEL_YUVA		=	GF_4CC('Y', 'U', 'V', 'A'),
	GF_PIXEL_YUVD		=	GF_4CC('Y', 'U', 'V', 'D'),
	GF_PIXEL_NV21		=	GF_4CC('N','V','2','1'),
	GF_PIXEL_NV21_10	=	GF_4CC('N','2','1','0'),
	GF_PIXEL_NV12		=	GF_4CC('N','V','1','2'),
	GF_PIXEL_NV12_10	=	GF_4CC('N','1','2','0'),
	GF_PIXEL_YUV422		=	GF_4CC('Y','4','4','2'),
	GF_PIXEL_YUV422_10	=	GF_4CC('Y','2','1','0'),
	GF_PIXEL_YUVA444	=	GF_4CC('Y','A','4','4'),
	GF_PIXEL_YUV444		=	GF_4CC('Y','4','4','4'),
	GF_PIXEL_YUV444_10	=	GF_4CC('Y','4','1','0'),
	GF_PIXEL_YUV444_PACK	=	GF_4CC('Y','U','V','4'),
	GF_PIXEL_VYU444_PACK	=	GF_4CC('V','Y','U','4'),
	GF_PIXEL_YUVA444_PACK	=	GF_4CC('Y','A','4','p'),
	GF_PIXEL_UYVA444_PACK	=	GF_4CC('U','Y','V','A'),
	GF_PIXEL_YUV444_10_PACK	=	GF_4CC('Y','4','1','p'),
	GF_PIXEL_V210			= GF_4CC('v','2','1','0'),
	GF_PIXEL_GL_EXTERNAL	=	GF_4CC('E','X','G','L')
} GF_PixelFormat;
GF_PixelFormat gf_pixel_fmt_parse(const char *pf_name);
const char *gf_pixel_fmt_name(GF_PixelFormat pfmt);
typedef enum
{
	GF_CODECID_NONE = 0,
	GF_CODECID_BIFS = 0x01,
	GF_CODECID_OD_V1 = 0x01,
	GF_CODECID_BIFS_V2 = 0x02,
	GF_CODECID_OD_V2 = 0x02,
	GF_CODECID_INTERACT = 0x03,
	GF_CODECID_BIFS_EXTENDED = 0x04,
	GF_CODECID_AFX = 0x05,
	GF_CODECID_FONT = 0x06,
	GF_CODECID_SYNTHESIZED_TEXTURE = 0x07,
	GF_CODECID_TEXT_MPEG4 = 0x08,
	GF_CODECID_LASER = 0x09,
	GF_CODECID_SAF = 0x0A,
	GF_CODECID_MPEG4_PART2 = 0x20,
	GF_CODECID_AVC = 0x21,
	GF_CODECID_AVC_PS = 0x22,
	GF_CODECID_HEVC = 0x23,
	GF_CODECID_SVC = 0x24,
	GF_CODECID_LHVC = 0x25,
	GF_CODECID_MVC = 0x29,
	GF_CODECID_AAC_MPEG4 = 0x40,
	GF_CODECID_MPEG2_SIMPLE = 0x60,
	GF_CODECID_MPEG2_MAIN = 0x61,
	GF_CODECID_MPEG2_SNR = 0x62,
	GF_CODECID_MPEG2_SPATIAL = 0x63,
	GF_CODECID_MPEG2_HIGH = 0x64,
	GF_CODECID_MPEG2_422 = 0x65,
	GF_CODECID_AAC_MPEG2_MP = 0x66,
	GF_CODECID_AAC_MPEG2_LCP = 0x67,
	GF_CODECID_AAC_MPEG2_SSRP = 0x68,
	GF_CODECID_MPEG2_PART3 = 0x69,
	GF_CODECID_MPEG1 = 0x6A,
	GF_CODECID_MPEG_AUDIO = 0x6B,
	GF_CODECID_JPEG = 0x6C,
	GF_CODECID_PNG = 0x6D,
	GF_CODECID_LAST_MPEG4_MAPPING = 0xFF,
	GF_CODECID_J2K = GF_4CC('j','p','2','k'),
	GF_CODECID_S263 = GF_4CC('s','2','6','3'),
	GF_CODECID_H263 = GF_4CC('h','2','6','3'),
	GF_CODECID_HEVC_TILES = GF_4CC( 'h', 'v', 't', '1' ),
	GF_CODECID_HEVC_MERGE = GF_4CC( 'h', 'v', 'c', 'm' ),
	GF_CODECID_EVRC	= GF_4CC('s','e','v','c'),
	GF_CODECID_SMV		= GF_4CC('s','s','m','v'),
	GF_CODECID_QCELP = GF_4CC('s','q','c','p'),
	GF_CODECID_AMR = GF_4CC('s','a','m','r'),
	GF_CODECID_AMR_WB = GF_4CC('s','a','w','b'),
	GF_CODECID_EVRC_PV	= GF_4CC('p','e','v','c'),
	GF_CODECID_SMPTE_VC1 = GF_4CC('v','c','-','1'),
	GF_CODECID_DIRAC = GF_4CC('d','r','a','c'),
	GF_CODECID_AC3 = GF_4CC('a','c','-','3'),
	GF_CODECID_EAC3 = GF_4CC('e','c','-','3'),
	GF_CODECID_TRUEHD = GF_4CC('m','l','p','a'),
	GF_CODECID_DRA = GF_4CC('d','r','a','1'),
	GF_CODECID_G719 = GF_4CC('g','7','1','9'),
	GF_CODECID_DTS_EXPRESS_LBR = GF_4CC('d','t','s','e'),
	GF_CODECID_DTS_CA = GF_4CC('d','t','s','c'),
	GF_CODECID_DTS_HD_HR_MASTER = GF_4CC('d','t','s','h'),
	GF_CODECID_DTS_HD_LOSSLESS = GF_4CC('d','t','s','l'),
	GF_CODECID_DTS_X = GF_4CC('d','t','s','x'),
	GF_CODECID_DTS_Y = GF_4CC('d','t','s','y'),
	GF_CODECID_DVB_EIT = GF_4CC('e','i','t',' '),
	GF_CODECID_SVG = GF_4CC('s','g','g',' '),
	GF_CODECID_SVG_GZ = GF_4CC('s','v','g','z'),
	GF_CODECID_DIMS = GF_4CC('d','i','m','s'),
	GF_CODECID_WEBVTT = GF_4CC('w','v','t','t'),
	GF_CODECID_SIMPLE_TEXT = GF_4CC('s','t','x','t'),
	GF_CODECID_META_TEXT = GF_4CC('m','e','t','t'),
	GF_CODECID_META_XML = GF_4CC('m','e','t','x'),
	GF_CODECID_SUBS_TEXT = GF_4CC('s','b','t','t'),
	GF_CODECID_SUBS_XML = GF_4CC('s','t','p','p'),
	GF_CODECID_TX3G = GF_4CC( 't', 'x', '3', 'g' ),
	GF_CODECID_SUBS_SSA = GF_4CC( 'a', 's', 's', 'a' ),
	GF_CODECID_DVB_SUBS = GF_4CC( 'd', 'v', 'b', 's' ),
	GF_CODECID_DVB_TELETEXT = GF_4CC( 'd', 'v', 'b', 't' ),
	GF_CODECID_SCTE35 = GF_4CC( 's', 'c', '3', '5' ),
	GF_CODECID_THEORA = GF_4CC('t','h','e','u'),
	GF_CODECID_VORBIS = GF_4CC('v','o','r','b'),
	GF_CODECID_FLAC = GF_4CC('f','l','a','c'),
	GF_CODECID_SPEEX = GF_4CC('s','p','e','x'),
	GF_CODECID_OPUS = GF_4CC('O','p','u','s'),
	GF_CODECID_SUBPIC = GF_4CC('s','u','b','p'),
	GF_CODECID_ADPCM = GF_4CC('A','P','C','M'),
	GF_CODECID_IBM_CVSD = GF_4CC('C','S','V','D'),
	GF_CODECID_ALAW = GF_4CC('A','L','A','W'),
	GF_CODECID_MULAW = GF_4CC('M','L','A','W'),
	GF_CODECID_OKI_ADPCM = GF_4CC('O','P','C','M'),
	GF_CODECID_DVI_ADPCM = GF_4CC('D','P','C','M'),
	GF_CODECID_DIGISTD = GF_4CC('D','S','T','D'),
	GF_CODECID_YAMAHA_ADPCM = GF_4CC('Y','P','C','M'),
	GF_CODECID_DSP_TRUESPEECH = GF_4CC('T','S','P','E'),
	GF_CODECID_GSM610 = GF_4CC('G','6','1','0'),
	GF_CODECID_IBM_MULAW = GF_4CC('I','U','L','W'),
	GF_CODECID_IBM_ALAW = GF_4CC('I','A','L','W'),
	GF_CODECID_IBM_ADPCM = GF_4CC('I','P','C','M'),
	GF_CODECID_FLASH = GF_4CC( 'f', 'l', 's', 'h' ),
	GF_CODECID_RAW = GF_4CC('R','A','W','M'),
	GF_CODECID_RAW_UNCV = GF_4CC('U','N','C','V'),
	GF_CODECID_AV1 = GF_4CC('A','V','1',' '),
	GF_CODECID_VP8 = GF_4CC('V','P','0','8'),
	GF_CODECID_VP9 = GF_4CC('V','P','0','9'),
	GF_CODECID_VP10 = GF_4CC('V','P','1','0'),
	GF_CODECID_MPHA = GF_4CC('m','p','h','a'),
	GF_CODECID_MHAS = GF_4CC('m','h','a','s'),
	GF_CODECID_APCH	= GF_4CC( 'a', 'p', 'c', 'h' ),
	GF_CODECID_APCO	= GF_4CC( 'a', 'p', 'c', 'o' ),
	GF_CODECID_APCN	= GF_4CC( 'a', 'p', 'c', 'n' ),
	GF_CODECID_APCS	= GF_4CC( 'a', 'p', 'c', 's' ),
	GF_CODECID_AP4X	= GF_4CC( 'a', 'p', '4', 'x' ),
	GF_CODECID_AP4H	= GF_4CC( 'a', 'p', '4', 'h' ),
	GF_CODECID_TMCD = GF_4CC('t','m','c','d'),
	GF_CODECID_EVTE = GF_4CC('e','v','t','e'),
	GF_CODECID_FFV1 = GF_4CC('f','f','v','1'),
	GF_CODECID_FFMPEG = GF_4CC('F','F','I','D'),
	GF_CODECID_VVC = GF_4CC('v','v','c',' '),
	GF_CODECID_VVC_SUBPIC = GF_4CC('v','v','c','s'),
	GF_CODECID_USAC = GF_4CC('u','s','a','c'),
	GF_CODECID_MPEG_AUDIO_L1 = GF_4CC('m','p','a','1'),
	GF_CODECID_MSPEG4_V3 = GF_4CC('D','I','V','3'),
	GF_CODECID_ALAC = GF_4CC('A','L','A','C'),
	GF_CODECID_DNXHD = GF_4CC('D','N','x','H'),
	GF_CODECID_FAKE_MP2T = GF_4CC('M','P','2','T'),
	GF_CODECID_IAMF = GF_4CC('i','a','m','f')
} GF_CodecID;
const char *gf_codecid_file_ext(GF_CodecID codecid);
typedef enum
{
	GF_AUDIO_FMT_U8 = 1,
	GF_AUDIO_FMT_S16,
	GF_AUDIO_FMT_S16_BE,
	GF_AUDIO_FMT_S32,
	GF_AUDIO_FMT_S32_BE,
	GF_AUDIO_FMT_FLT,
	GF_AUDIO_FMT_FLT_BE,
	GF_AUDIO_FMT_DBL,
	GF_AUDIO_FMT_DBL_BE,
	GF_AUDIO_FMT_S24,
	GF_AUDIO_FMT_S24_BE,
	GF_AUDIO_FMT_LAST_PACKED,
	GF_AUDIO_FMT_U8P,
	GF_AUDIO_FMT_S16P,
	GF_AUDIO_FMT_S32P,
	GF_AUDIO_FMT_FLTP,
	GF_AUDIO_FMT_DBLP,
	GF_AUDIO_FMT_S24P,
} GF_AudioFormat;
GF_AudioFormat gf_audio_fmt_parse(const char *af_name);
const char *gf_audio_fmt_name(GF_AudioFormat afmt);