share/python/libgpac.py


_libgpac.gf_filter_pid_get_info.argtypes = [GF_FilterPid, c_uint, POINTER(POINTER(GF_PropertyEntry))]
_libgpac.gf_filter_pid_get_info.restype = POINTER(GF_PropertyValue)
_libgpac.gf_filter_pid_get_info_str.argtypes = [GF_FilterPid, c_char_p, POINTER(POINTER(GF_PropertyEntry))]
_libgpac.gf_filter_pid_get_info_str.restype = POINTER(GF_PropertyValue)
_libgpac.gf_filter_release_property.argtypes = [POINTER(GF_PropertyEntry)]


_libgpac.gf_pixel_fmt_name.argtypes = [c_uint]
_libgpac.gf_pixel_fmt_name.restype = c_char_p

_libgpac.gf_audio_fmt_name.argtypes = [c_uint]
_libgpac.gf_audio_fmt_name.restype = c_char_p

_libgpac.gf_filter_pid_enum_properties.argtypes = [GF_FilterPid, POINTER(c_uint), POINTER(c_uint), POINTER(c_char_p)]
_libgpac.gf_filter_pid_enum_properties.restype = POINTER(GF_PropertyValue)

_libgpac.gf_props_4cc_get_name.argtypes = [c_uint]
_libgpac.gf_props_4cc_get_name.restype = c_char_p

_libgpac.gf_stream_type_name.argtypes = [c_uint]
_libgpac.gf_stream_type_name.restype = c_char_p

_libgpac.gf_codecid_file_ext.argtypes = [c_uint]
_libgpac.gf_codecid_file_ext.restype = c_char_p

_libgpac.gf_filter_pid_get_source_filter.argtypes = [GF_FilterPid]
_libgpac.gf_filter_pid_get_source_filter.restype = GF_Filter

_libgpac.gf_filter_pid_enum_destinations.argtypes = [GF_FilterPid, c_uint]
_libgpac.gf_filter_pid_enum_destinations.restype = GF_Filter

_libgpac.gf_filter_enumerate_args.argtypes = [GF_Filter, c_uint]
_libgpac.gf_filter_enumerate_args.restype = POINTER(GF_FilterArg)

_libgpac.gf_filter_get_info.argtypes = [GF_Filter, c_uint, POINTER(POINTER(GF_PropertyEntry))]
_libgpac.gf_filter_get_info.restype = POINTER(GF_PropertyValue)
_libgpac.gf_filter_get_info_str.argtypes = [GF_Filter, c_char_p, POINTER(POINTER(GF_PropertyEntry))]
_libgpac.gf_filter_get_info_str.restype = POINTER(GF_PropertyValue)


def _prop_to_python(pname, prop):
    type = prop.type
    if (type==GF_PROP_SINT):
        return prop.value.sint
    if (type==GF_PROP_UINT):
        if pname=="StreamType":
            return _libgpac.gf_stream_type_name(prop.value.uint).decode('utf-8')
        if pname=="CodecID":
            cid = _libgpac.gf_codecid_file_ext(prop.value.uint).decode('utf-8')
            names=cid.split('|')
            return names[0]
        if pname=="PixelFormat":
            return _libgpac.gf_pixel_fmt_name(prop.value.uint).decode('utf-8')
        if pname=="AudioFormat":
            return _libgpac.gf_audio_fmt_name(prop.value.uint).decode('utf-8')
        return prop.value.uint
    if (type==GF_PROP_LSINT):
        return prop.value.longsint
    if (type==GF_PROP_LUINT):
        return prop.value.longuint
    if (type==GF_PROP_BOOL):
        return prop.value.boolean
    if (type==GF_PROP_FRACTION):
        return prop.value.frac
    if (type==GF_PROP_FRACTION64):
        return prop.value.lfrac
    if (type==GF_PROP_FLOAT):
        return prop.value.fnumber
    if (type==GF_PROP_DOUBLE):
        return prop.value.number
    if (type==GF_PROP_VEC2I):
        return prop.value.vec2i
    if (type==GF_PROP_VEC2):
        return prop.value.vec2
    if (type==GF_PROP_VEC3I):
        return prop.value.vec3i
    if (type==GF_PROP_VEC3):
        return prop.value.vec3
    if (type==GF_PROP_VEC4I):
        return prop.value.vec4i
    if (type==GF_PROP_VEC4):
        return prop.value.vec4
    if (type==GF_PROP_PIXFMT):
        pname = _libgpac.gf_pixel_fmt_name(prop.value.uint)
        return pname.decode('utf-8')
    if (type==GF_PROP_PCMFMT):
        pname = _libgpac.gf_audio_fmt_name(prop.value.uint)
        return pname.decode('utf-8')
    if (type==GF_PROP_STRING) or (type==GF_PROP_STRING_NO_COPY) or (type==GF_PROP_NAME):
        return prop.value.string.decode('utf-8')
    if (type==GF_PROP_DATA) or (type==GF_PROP_DATA_NO_COPY) or (type==GF_PROP_CONST_DATA):
        return prop.value.data
    if (type==GF_PROP_POINTER):
        return prop.value.ptr
    if (type==GF_PROP_STRING_LIST):
        raise Exception('Mapping from stringlist to python not implemented ')
    if (type==GF_PROP_UINT_LIST):
        res = [];
        for i in range(prop.value.uint_list.nb_items):
            val = prop.value.uint_list.vals[i]
            res.append(val)
        return res
    if (type==GF_PROP_SINT_LIST):
        res = [];
        for i in range(prop.value.uint_list.nb_items):
            val = prop.value.sint_list.vals[i]
            res.append(val)
        return res
    if (type==GF_PROP_VEC2I_LIST):
        res = [];
        for i in range(prop.value.v2i_list.nb_items):
            val = prop.value.v2i_list.vals[i]
            res.append(val)
        return res

    raise Exception('Unknown property type ' + str(type))



class Filter:
    def __init__(self, session, filter):
        self._filter = filter
        self._session = session

    def __str__(self):
        return self.name

    def remove(self):
        _libgpac.gf_filter_remove(self._filter)

    def update(self, name, value):
        _libgpac.gf_fs_send_update(None, None, self._filter, name, value, 0)

    def set_source(self, f, link_args=None):
        if (f!=None):
            _libgpac.gf_filter_set_source(self._filter, f._filter, link_args)

    def insert(self, f, link_args=None):
        if (f!=None):
            _libgpac.gf_filter_set_source(f._filter, self._filter, link_args)
            _libgpac.gf_filter_reconnect_output(f._filter)

    def _pid_prop_ex(self, prop_name, pid, IsInfo):
        _name = prop_name.encode('utf-8')
        p4cc = _libgpac.gf_props_get_id(_name)
        if IsInfo:
            pe = POINTER(GF_PropertyEntry)()
            if p4cc:
                prop = _libgpac.gf_filter_pid_get_info(pid, p4cc, byref(pe))
            else:
                prop = _libgpac.gf_filter_pid_get_info_str(pid, _name, byref(pe))
            if prop:
                res = _prop_to_python(prop_name, prop.contents)
                _libgpac.gf_filter_release_property(pe)
                return res
            return None

        if p4cc:
            prop = _libgpac.gf_filter_pid_get_property(pid, p4cc)
        else:
            prop = _libgpac.gf_filter_pid_get_property_str(pid, _name)
        if prop:
            return _prop_to_python(prop_name, prop.contents)
        return None;

    def _pid_prop(self, idx, prop_name, IsInput):
        if IsInput:
            pid = _libgpac.gf_filter_get_ipid(self._filter, idx)
        else:
            pid = _libgpac.gf_filter_get_opid(self._filter, idx)
        if (pid==None):
            raise Exception('No PID with index ' + str(idx) + ' in filter ' + self.name )
        return self._pid_prop_ex(self, prop_name, pid, False)

    def _pid_enum_props_ex(self, callback_obj, _pid):
        if (hasattr(callback_obj, 'on_prop_enum')==False):
            return

        pidx=c_uint(0)
        while True:
            _p4cc=c_uint(0)
            _pname=c_char_p(0)
            prop = _libgpac.gf_filter_pid_enum_properties(_pid, byref(pidx), byref(_p4cc), byref(_pname))
            if (prop):
                p4cc=_p4cc.value
                pname=None
                if _pname:
                    pname=_pname.value.decode('utf-8')
                else:
                    pname=_libgpac.gf_props_4cc_get_name(p4cc).decode('utf-8')
                pval = _prop_to_python(pname, prop.contents)
                callback_obj.on_prop_enum(pname, pval)
            else:
                break

    def _pid_enum_props(self, idx, callback_obj, IsInput):
        if IsInput:
            pid = _libgpac.gf_filter_get_ipid(self._filter, idx)
        else:
            pid = _libgpac.gf_filter_get_opid(self._filter, idx)

        if (pid==None):
            raise Exception('No PID with index ' + str(idx) + ' in filter ' + self.name )

        _pid_enum_props_ex(self, callback_obj, pid)

    def ipid_prop(self, idx, prop_name):
        return self._pid_prop(idx, prop_name, True)
    def ipid_enum_props(self, idx, callback_obj):
        self._pid_enum_props(idx, callback_obj, True)
    def opid_prop(self, idx, prop_name):
        return self._pid_prop(idx, prop_name, False)
    def opid_enum_props(self, idx, callback_obj):
        self._pid_enum_props(idx, callback_obj, False)


    def ipid_source(self, idx):
        pid = _libgpac.gf_filter_get_ipid(self._filter, idx)
        if (pid==None):
            raise Exception('No PID with index ' + str(idx) + ' in filter ' + self.name )
        f = _libgpac.gf_filter_pid_get_source_filter(pid)
        if f==None:
            return None
        return self._session._to_filter(f)

    def opid_sinks(self, idx):
        pid = _libgpac.gf_filter_get_opid(self._filter, idx)
        if (pid==None):
            raise Exception('No PID with index ' + str(idx) + ' in filter ' + self.name )
        res=[]
        f_idx=0
        while True:
            f = _libgpac.gf_filter_pid_enum_destinations(pid, f_idx)
            f_idx+=1        
            if f==None:
                break
            filter = self._session._to_filter(f)
            print('sink ' + filter.name)
            res.append(filter)
        return res

    def all_args(self):
        res=[]
        a_idx=0
        while True:
            arg = _libgpac.gf_filter_enumerate_args(self._filter, a_idx)
            if arg:
                arg_val = arg.contents
                res.append(arg_val)
            else:
               break
            a_idx+=1
        return res

    def get_info(self, prop_name):
        _name = prop_name.encode('utf-8')
        p4cc = _libgpac.gf_props_get_id(_name)
        pe = POINTER(GF_PropertyEntry)()
        if p4cc:
            prop = _libgpac.gf_filter_get_info(self._filter, p4cc, byref(pe))
        else:
            prop = _libgpac.gf_filter_get_info_str(self._filter, _name, byref(pe))
        if prop:
            res = _prop_to_python(prop_name, prop.contents)
            _libgpac.gf_filter_release_property(pe)
            return res
        return None

    @property
    def stats(self):
        stats = GF_FilterStats()
        err = _libgpac.gf_filter_get_stats(self._filter, byref(stats))
        if (err<0): 
            raise Exception('Failed to fetch filter stats: ' + e2s(err))
        return stats

    @property
    def name(self):
        return str(_libgpac.gf_filter_get_name(self._filter), 'utf-8')

    @property
    def ID(self):
        return str(_libgpac.gf_filter_get_id(self._filter), 'utf-8')

    @property
    def nb_ipid(self):
        return _libgpac.gf_filter_get_ipid_count(self._filter)

    @property
    def nb_opid(self):
        return _libgpac.gf_filter_get_opid_count(self._filter)


#
#        custom filter bindings
#

_libgpac.gf_filter_push_caps.argtypes = [GF_Filter, c_uint, POINTER(GF_PropertyValue), c_char_p, c_uint, c_uint]
_libgpac.gf_props_4cc_get_type.argtypes = [c_uint]
_libgpac.gf_stream_type_by_name.argtypes = [c_char_p]
_libgpac.gf_stream_type_by_name.restype = c_uint

_libgpac.gf_codec_parse.argtypes = [c_char_p]
_libgpac.gf_codec_parse.restype = c_uint

_libgpac.gf_pixel_fmt_parse.argtypes = [c_char_p]
_libgpac.gf_pixel_fmt_parse.restype = c_uint

_libgpac.gf_audio_fmt_parse.argtypes = [c_char_p]
_libgpac.gf_audio_fmt_parse.restype = c_uint

def _make_prop(prop4cc, propname, prop):
    prop_val = GF_PropertyValue()
    if prop4cc==0:
        prop_val.type = GF_PROP_STRING
        prop_val.value.string = str(prop).encode('utf-8')
        return prop_val
